We've had to change how config works as Java really doesn't like resolves returning either a list or a singlton... and neither do it